fix: update translation

--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -1,5 +1,5 @@
 {
-    "main": {
-        "welcome": "Добро пожаловать на Detideda"
+    "home": {
+        "welcome": "Добро пожаловать на сайт Detideda"
     }
 }
